--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
-
+<%= debug @premission_granted %>
+<%= debug @permissions %>
 <p>
   <b>Title:</b>
   <%= @feed.title %>
