--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,8 @@
               </a>
              <ul class="dropdown-menu">
                 <li><%= link_to "Profile", current_user %></li>
+                <li><%= link_to "Permissions", permissions_path %></li>
+                <li><%= link_to "Users", users_path %></li>
                 <li class="divider"></li>
                 <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
               </ul>
